# shibuya

./: .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  babel.cfg  genicons.js  package-lock.json  package.json  pyproject.toml  requirements.txt  serve.py  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: docs.yml  pypi.yml  test.yml
docs/: 404.rst  alternatives.rst  changelog.rst  conf.py  index.rst  install.rst  sponsors.rst  stability.rst
docs/_public/: 404.html  robots.txt
docs/_static/: rtd-dummy.js
docs/_templates/: accent-colors.html  branding.html
docs/_templates/partials/: article-bottom.html  extra-foot.html  extra-head.html  globaltoc-above.html  page-bottom.html  sidebar-links.html
docs/contributing/: index.rst  roadmap.rst  translations.rst
docs/customisation/: advertisement.rst  announcement.rst  colors.rst  copypage.rst  css.rst  extensions.rst  fonts.rst  icons.rst  index.rst  languages.rst  layouts.rst  logos.rst  markdown.md  markdown.rst  navbar.rst  sidebar.rst  social.rst
docs/example_code/: click_demo.py  numpydoc_example.py  sqla_models.py
docs/extensions/: click-extra.rst  docsearch.rst  jupyter-sphinx.rst  mermaid.rst  nbsphinx.ipynb  numpydoc.rst  sphinx-autoapi.rst  sphinx-click.rst  sphinx-contributors.rst  sphinx-copybutton.rst  sphinx-datatables.rst  sphinx-design.rst  sphinx-iconify.rst  sphinx-sqlalchemy.rst  sphinx-tabs.rst  sphinx-togglebutton.rst
docs/writing/: admonition.rst  api.rst  code.rst  extensions.rst  index.rst  lists.rst  markup.rst  math.rst  media.rst  meta.rst  quotes.rst  table.rst
scripts/: genicons.js  versionbump.py
shibuya/: __init__.py
shibuya/theme/shibuya/: layout.html  theme.conf
src/shibuya/: __init__.py  _builders.py  _patch.py  _pygments.py  _social_links.py  _sphinx.py  _wrapper.py  context.py  sponsors.py
src/shibuya/css/: base.css  dark.css  light.css
src/shibuya/locale/: sphinx.pot
src/shibuya/locale/de/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/es/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/fr/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/ja/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/ko/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/pt/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/pt_BR/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/zh/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/locale/zh_TW/LC_MESSAGES/: sphinx.mo  sphinx.po
src/shibuya/theme/shibuya/: base.html  layout.html  localtoc.html  page.html  relations.html  search.html  searchbox.html  theme.conf
src/shibuya/theme/shibuya/components/: alternate-links.html  back-to-top.html  breadcrumbs.html  copy-page-button.html  css_variables.html  discussion-link.html  foot-copyright.html  foot-socials.html  header.html  meta-opengraph.html  nav-languages.html  nav-links.html  nav-socials.html  nav-versions.html  nav_links.html  navigation.html  page-searchbox.html  searchbox.html  searchbox2.html  site-foot.html  site-head.html  site_footer.html  site_header.html  theme-switch.html  theme_select.html  variables.html
src/shibuya/theme/shibuya/extensions/: buysellads.html
src/shibuya/theme/shibuya/layout/: 404.html  compact.html  default.html  landing.html  simple.html
static/: index.css  index.js  package-lock.json  package.json  pygments.css  tailwind.config.js
static/css/: base.css  colors.css  foot.css  head.css  icons.css  logos.css  lucid.css  lucide.css  modules.css  page.css  sidebar.css  simpleicons.css  tailwindcss.css  variables.css
static/css/components/: admonition.css  api-doc.css  back-to-top.css  code.css  container.css  copy-page-button.css  edit-this-page.css  external.css  globaltoc.css  hamburger.css  highlight.css  icon-link.css  localtoc.css  navigation.css  repo-stats.css  search.css  searchbox.css  sphinx-design.css  sphinx.css  syntax.css  table.css  theme-selector.css  yue.css
static/css/contents/: admonition.css  api-doc.css  code.css  quote.css  sphinx.css  syntax.css  table.css  yue.css
static/css/extensions/: copybutton.css  docsearch.css  jupyter.css  misc.css  nbsphinx.css  rtd.css  sphinx-contributors.css  sphinx-design.css  sphinx-gallery.css  sphinx-sqlalchemy.css  sphinx-tabs.css  sphinx-togglebutton.css  sponsors.css  xarray.css
static/css/icons/: lucide.css  simpleicons.css
static/css/layout/: breadcrumbs.css  foot.css  globaltoc.css  head-nav.css  head.css  localtoc.css  navigation.css  page.css  rside.css  sidebar.css
static/js/: banner.js  carbon.js  copy-page.js  globaltoc.js  localtoc.js  menu.js  repo-stats.js  rtd.js  scroller.js  theme.js  toc.js
(+15 files in other folders)
