[project]
name = "shibuya"
description = "A clean, responsive, and customizable Sphinx documentation theme with light/dark mode."
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
    "Sphinx"
]

license = {text = "BSD-3-Clause"}
authors = [
    {name = "Hsiaoming Yang", email = "me@lepture.com"},
]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.entry-points]
"sphinx.html_themes" = {shibuya = "shibuya"}

[project.urls]
Source = "https://github.com/lepture/shibuya"
Documentation = "https://shibuya.lepture.com/"
Sponsors = "https://github.com/sponsors/lepture"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "shibuya.__version__"}
