[project]
name = "shibuya"
description = "A clean, responsive, and customizable Sphinx documentation theme with light/dark mode."
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "Sphinx"
]

license = {text = "BSD-3-Clause"}
authors = [
    {name = "Hsiaoming Yang", email = "me@lepture.com"},
]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.entry-points]
"sphinx.html_themes" = {shibuya = "shibuya"}

[project.urls]
Source = "https://github.com/lepture/shibuya"
Documentation = "https://shibuya.lepture.com/"
Sponsors = "https://github.com/sponsors/lepture"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "shibuya.__version__"}

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "ipykernel>=6.29.5",
    "jupyter-sphinx>=0.5.3",
    "matplotlib>=3.7.5",
    "myst-parser>=3.0.1",
    "nbsphinx>=0.9.6",
    "numpy>=1.24.4",
    "numpydoc>=1.7.0",
    "pandas>=2.0.3",
    "sphinx-click>=6.0.0",
    "sphinx-contributors>=0.2.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-iconify>=0.1.0",
    "sphinx-docsearch>=0.0.8",
    "sphinx-sitemap>=2.6.0",
    "sphinx-sqlalchemy>=0.3.0",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxcontrib-video>=0.4.1",
    "sphinxcontrib-youtube>=1.4.1",
]
serve = [
    "livereload>=2.7.1",
]
